--- a/testindex.html
+++ b/testindex.html
@@ -42,8 +42,8 @@ h2 {
 
 /* REMOVE ALL SPACE UNDER HEADER */
 .banner-img.header {
-  margin:0;
-  padding:0;
+  margin:0 !important;
+  padding:0 !important;
 }
 
 /* --------------------------------------------------------------
@@ -60,7 +60,7 @@ h2 {
   justify-content: center;
   align-items: flex-end;
   padding-bottom: 25px;
-  margin: 0; /* ← NO SPACE BETWEEN HEADER & TEAM */
+  margin: 0;
 }
 .hero::after {
   content:"";
@@ -73,11 +73,6 @@ h2 {
   text-align:center;
   z-index:10;
   margin-bottom: 6px;
-}
-.hero-title {
-  font-size: 2.4rem;
-  font-weight: 900;
-  margin-bottom: 4px;
 }
 .hero-sub {
   font-size: 1rem;
@@ -138,7 +133,7 @@ h2 {
 }
 
 /* --------------------------------------------------------------
-   PROGRAMS
+   PROGRAMS (BRIGHTER, UNIFORM)
 -------------------------------------------------------------- */
 .program-grid {
   display:grid;
@@ -146,7 +141,7 @@ h2 {
   gap:16px;
 }
 .program-box {
-  background:#111827;
+  background:#1A2333; /* BRIGHTER + uniform */
   padding:22px;
   border-radius:14px;
   text-align:center;
@@ -305,7 +300,7 @@ form button:hover {
 }
 
 /* --------------------------------------------------------------
-   FOOTER
+   FOOTER — ONE IMAGE PER ROW
 -------------------------------------------------------------- */
 footer {
   padding:30px 18px;
@@ -313,26 +308,12 @@ footer {
   text-align:center;
   margin-top:30px;
 }
-
-/* NEW FOOTER LAYOUT REQUESTED */
-.footer-two {
+.footer-row {
   display:flex;
   justify-content:center;
-  gap:22px;
-  flex-wrap:wrap;
-  margin-bottom:16px;
+  margin-bottom:20px;
 }
-.footer-two img {
-  width:120px;
-  border-radius:12px;
-  background:#111;
-  padding:8px;
-}
-.footer-one {
-  display:flex;
-  justify-content:center;
-}
-.footer-one img {
+.footer-row img {
   width:140px;
   border-radius:12px;
   background:#111;
@@ -358,13 +339,14 @@ footer {
 </head>
 <body>
 
-<!-- header.png (NO SPACE BELOW) -->
+<!-- header.png -->
 <img src="header.png" class="banner-img header" />
 
 <!-- HERO — team.png -->
 <div class="hero">
   <div class="hero-content">
-    <div class="hero-title">GRIT CITY BJJ</div>
+
+    <!-- REMOVED "GRIT CITY BJJ" -->
     <div class="hero-sub">BJJ COACH International Association in Tacoma, WA</div>
 
     <div class="hero-btns">
@@ -422,7 +404,7 @@ footer {
 <!-- tacoma.png -->
 <img src="tacoma.png" class="banner-img" />
 
-<!-- face-off.png BELOW tacoma.png -->
+<!-- face-off.png -->
 <img src="face-off.png" class="banner-img" />
 
 <!-- GALLERY -->
@@ -615,7 +597,6 @@ Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
   <button>Submit</button>
 </form>
 
-<!-- INTRODUCTORY IMAGE DIRECTLY BELOW FORM -->
 <img src="introductory_class.jpg" style="width:100%;margin-top:20px;border-radius:14px;display:block;">
 </section>
 
@@ -635,17 +616,18 @@ function toggleAcc(btn){
 }
 </script>
 
-<!-- FOOTER -->
+<!-- FOOTER — ONE IMAGE PER ROW -->
 <footer>
 
-<!-- TOP ROW — military + no bullies (side by side) -->
-<div class="footer-two">
+<div class="footer-row">
   <img src="military_discounts.gif">
+</div>
+
+<div class="footer-row">
   <img src="no_bullies.jpg">
 </div>
 
-<!-- SECOND ROW — sanitized below them centered -->
-<div class="footer-one">
+<div class="footer-row">
   <img src="sanitized_facility.jpg">
 </div>
 
