--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-
 <title>GRIT CITY BJJ | Tacoma, WA</title>
 
-<!-- DISABLE ZOOM — FINAL, FULL LOCKDOWN -->
+<!-- DISABLE ZOOM — FULL LOCKDOWN -->
 <meta name="viewport"
 content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover" />
 
@@ -19,7 +18,7 @@ html, body {
   touch-action: pan-x pan-y !important;
 }
 input, textarea, select {
-  font-size: 16px !important; /* prevents iOS auto-zoom on inputs */
+  font-size: 16px !important;
 }
 * {
   touch-action: manipulation;
@@ -37,6 +36,22 @@ body {
   overflow-x: hidden;
 }
 
+/* DESKTOP WALLS — CLEAN CONTAINER ON PC */
+@media (min-width: 1024px) {
+  body {
+    display: flex;
+    justify-content: center;
+  }
+  .site-wrap {
+    width: 1100px;
+    background: #0A0A0A;
+  }
+  .banner-img {
+    width: 100%;
+    border-radius: 14px;
+  }
+}
+
 section {
   padding: 45px 18px;
   max-width: 1100px;
@@ -51,7 +66,7 @@ h2 {
   color: #ffffff;
 }
 
-/* HEADER (20px spacing ABOVE header only) ------------------------- */
+/* HEADER */
 .header-wrap {
   margin-top: 20px;
 }
@@ -65,7 +80,7 @@ h2 {
   box-shadow:0 5px 24px rgba(0,0,0,0.55);
 }
 
-/* NAV BAR --------------------------------------------------------- */
+/* NAV BAR */
 .navbar {
   background: rgba(10,10,10,0.75);
   backdrop-filter: blur(6px);
@@ -93,7 +108,7 @@ h2 {
   border-color:#3B82F6;
 }
 
-/* PROGRAMS -------------------------------------------------------- */
+/* PROGRAMS */
 #programs-title { color:white; }
 
 .program-grid {
@@ -112,7 +127,7 @@ h2 {
   color:white;
 }
 
-/* SCHEDULE -------------------------------------------------------- */
+/* SCHEDULE */
 .schedule-card {
   background:#111827;
   padding:16px;
@@ -126,7 +141,7 @@ h2 {
   border-radius:12px;
 }
 
-/* LOCATION -------------------------------------------------------- */
+/* LOCATION */
 .location-card {
   background:#111827;
   padding:22px;
@@ -149,7 +164,7 @@ h2 {
   border:1px solid #1F2937;
 }
 
-/* GALLERY --------------------------------------------------------- */
+/* GALLERY */
 .gallery-scroll {
   display:flex;
   overflow-x:auto;
@@ -164,7 +179,7 @@ h2 {
   cursor:pointer;
 }
 
-/* LINEAGE --------------------------------------------------------- */
+/* LINEAGE */
 .lineage-grid {
   display:grid;
   grid-template-columns:repeat(auto-fit, minmax(130px,1fr));
@@ -178,7 +193,7 @@ h2 {
   object-fit:cover;
 }
 
-/* INSTRUCTORS ----------------------------------------------------- */
+/* INSTRUCTORS */
 .instructor-grid {
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
@@ -198,7 +213,7 @@ h2 {
   border-radius:12px;
 }
 
-/* ACCORDIONS ------------------------------------------------------ */
+/* ACCORDIONS */
 .accordion-btn {
   width:100%;
   padding:14px 18px;
@@ -225,7 +240,7 @@ h2 {
   border:1px solid #1F2937;
 }
 
-/* FORM ------------------------------------------------------------ */
+/* FORM */
 form input, form textarea {
   width:100%;
   background:#1F2937;
@@ -245,7 +260,7 @@ form button {
   margin-top:8px;
 }
 
-/* FOOTER ---------------------------------------------------------- */
+/* FOOTER */
 footer {
   padding:30px 18px;
   background:#080808;
@@ -253,7 +268,6 @@ footer {
   margin-top:30px;
 }
 
-/* Bottom images: EACH ON OWN ROW */
 .footer-img-row {
   text-align:center;
   margin-bottom:22px;
@@ -265,7 +279,7 @@ footer {
   padding:8px;
 }
 
-/* Pulse Animation for Login Button */
+/* PULSE LOGIN BUTTON */
 @keyframes pulseButton {
   0%   { transform: scale(1); }
   50%  { transform: scale(1.06); }
@@ -278,18 +292,18 @@ footer {
 </head>
 
 <body>
+<div class="site-wrap">
 
-<!-- SPACING ABOVE HEADER + HEADER IMAGE -->
+<!-- HEADER -->
 <div class="header-wrap">
   <img src="header.webp" class="banner-img">
 </div>
 
-<!-- TAGLINE -->
 <div style="text-align:center; margin:18px 0 0 0; font-size:1.1rem; font-weight:700; color:#ffffff;">
   BJJ COACH International Association | Tacoma, WA
 </div>
-   
-<!-- NAVIGATION -->
+
+<!-- NAV -->
 <div class="navbar">
   <div class="nav-inner">
     <a href="#conduct">Conduct</a>
@@ -299,19 +313,13 @@ footer {
   </div>
 </div>
 
-<!-- STUDENT LOGIN BUTTON -->
+<!-- LOGIN -->
 <div style="text-align:center; margin:18px 0;">
   <a href="https://bjjtacoma.kicksite.net/users/sign_in"
      target="_blank"
      rel="noopener noreferrer"
      class="pulse-login"
-     style="background:#3B82F6;
-            padding:12px 24px;
-            border-radius:10px;
-            color:white;
-            font-weight:800;
-            text-decoration:none;
-            display:inline-block;">
+     style="background:#3B82F6; padding:12px 24px; border-radius:10px; color:white; font-weight:800; text-decoration:none; display:inline-block;">
      Student Login
   </a>
 </div>
@@ -353,10 +361,8 @@ footer {
 </div>
 </section>
 
-<!-- tacoma.webp -->
+<!-- IMAGES -->
 <img src="tacoma.webp" class="banner-img">
-
-<!-- face-off.webp -->
 <img src="face-off.webp" class="banner-img">
 
 <!-- GALLERY -->
@@ -373,11 +379,7 @@ footer {
 <section>
 <h2>Best of Tacoma Awards</h2>
 <div class="gallery-scroll">
-
-  <!-- NEW FIRST ENTRY -->
   <img src="best_of_tacoma_2025.jpg" onclick="pop(this)">
-
-  <!-- REVERSED ORDER -->
   <img src="best_of_tacoma_2024.jpg" onclick="pop(this)">
   <img src="best_of_tacoma_2023.jpg" onclick="pop(this)">
   <img src="best_of_tacoma_2022.jpg" onclick="pop(this)">
@@ -391,7 +393,6 @@ footer {
   <img src="best_of_tacoma_2014.jpg" onclick="pop(this)">
   <img src="best_of_tacoma_2013.jpg" onclick="pop(this)">
   <img src="best_of_tacoma_2012.jpg" onclick="pop(this)">
-
 </div>
 </section>
 
@@ -475,7 +476,7 @@ footer {
 </div>
 </section>
 
-<!-- FAQS -->
+<!-- FAQ -->
 <section id="faqs">
 <h2>Brazilian Jiu-Jitsu FAQ's</h2>
 <button class="accordion-btn" onclick="toggleAcc(this)">Expand FAQ's</button>
@@ -514,16 +515,12 @@ Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.
 </div>
 </section>
 
-<!-- TRY FREE CLASS -->
+<!-- FREE CLASS FORM -->
 <section id="try">
 <h2>Try a Free Class</h2>
 
 <form id="freeClassForm" action="https://formsubmit.co/gritcitybjj@gmail.com" method="POST">
-
-  <!-- Disable CAPTCHA -->
   <input type="hidden" name="_captcha" value="false">
-
-  <!-- No redirect after submit -->
   <input type="hidden" name="_next" value="">
 
   <input name="Name" placeholder="Name (required)" required>
@@ -534,7 +531,7 @@ Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.
   <button>Submit</button>
 </form>
 
-<!-- POPUP -->
+<!-- THANK YOU POPUP -->
 <div id="thankYouPopup"
      style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.85);
             z-index:999999; justify-content:center; align-items:center;">
@@ -587,7 +584,7 @@ function closePopup() {
 <img src="introductory_class.jpg" style="width:100%;margin-top:20px;border-radius:14px;display:block;">
 </section>
 
-<!-- POPUP -->
+<!-- POPUP VIEWER -->
 <div id="imgPopup" onclick="this.style.display='none'" 
      style="display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:99999;">
   <img style="max-width:90%;max-height:90%;border-radius:12px;">
@@ -606,34 +603,28 @@ function toggleAcc(btn){
 
 <!-- FOOTER -->
 <footer>
-
 <div class="footer-img-row"><img src="military_discounts.gif"></div>
 <div class="footer-img-row"><img src="no_bullies.jpg"></div>
 <div class="footer-img-row"><img src="sanitized_facility.jpg"></div>
-<!-- SOCIAL MEDIA ICONS -->
+
+<!-- SOCIALS -->
 <div style="text-align:center; margin:25px 0;">
-  
-  <!-- Instagram -->
 <a href="https://instagram.com/gritcitybjj"
    target="_blank"
-   rel="noopener noreferrer"
-   style="text-decoration:none; color:transparent;">
+   rel="noopener noreferrer">
    <img src="instagram.png" style="width:38px; margin:0 12px;">
 </a>
 
-  <!-- Facebook -->
 <a href="https://facebook.com/gritcitybjj"
    target="_blank"
-   rel="noopener noreferrer"
-   style="text-decoration:none; color:transparent;">
+   rel="noopener noreferrer">
    <img src="facebook.png" style="width:38px; margin:0 12px;">
 </a>
-
 </div>
+
 <p>&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
 </footer>
 
+</div><!-- END .site-wrap -->
 </body>
 </html>
-
-
